<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.5</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>org.bigraphs.model.provider</groupId>
    <artifactId>bigrid-provider-service</artifactId>
    <version>1.5.0-SNAPSHOT</version>
    <name>bigraphs.bigrid-provider-service</name>
    <description>
        Reactive Spring Boot service for on-demand generation of parameterizable
        bigraph-style location models — including grids, quadtrees, and random
        point sets — delivered as JSON or Ecore-compliant XML.
        Designed for cyber-physical systems, simulation workflows,
        and rigorous model consistency validation.
        Includes integration with Eclipse Connected Data Objects (CDO) to deliver
        BiGrid models from a shared model repository.
    </description>

    <url/>
    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <id>dgrzelak</id>
            <name>Dominik Grzelak</name>
            <email>dominik.grzelak@tu-dresden.de</email>
            <organization>Technische Universität Dresden</organization>
            <organizationUrl>https://tu-dresden.de/ing/informatik/smt/st</organizationUrl>
            <roles>
                <role>Developer</role>
            </roles>
            <timezone>+2</timezone>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:https://github.com/UniAgent-Platform/bigrid-provider-service.git</connection>
        <developerConnection>scm:git@github.com:UniAgent-Platform/bigrid-provider-service.git
        </developerConnection>
        <url>https://github.com/UniAgent-Platform/bigrid-provider-service</url>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <java.version>21</java.version>
        <bigraph.model-provider.version>1.1.7</bigraph.model-provider.version>
        <spring.data.cdo.version>0.7.5</spring.data.cdo.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.bigraphs.model.provider</groupId>
            <artifactId>model-provider-core</artifactId>
            <version>${bigraph.model-provider.version}</version>
            <exclusions>
                <!-- Because choco-solver contains old protoc version -->
                <exclusion>
                    <groupId>org.bigraphs.framework</groupId>
                    <artifactId>bigraph-simulation</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!-- Protobut -->
        <dependency>
            <groupId>com.google.protobuf</groupId>
            <artifactId>protobuf-java</artifactId>
        </dependency>
        <!-- CDO -->
        <dependency>
            <groupId>org.bigraphs.springframework.data</groupId>
            <artifactId>spring-data-cdo</artifactId>
            <version>${spring.data.cdo.version}</version>
        </dependency>
        <!-- Spring -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>
        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <!-- Test -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.skyscreamer</groupId>
                    <artifactId>jsonassert</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>io.projectreactor</groupId>
            <artifactId>reactor-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java</artifactId>
                <version>4.31.1</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.graalvm.buildtools</groupId>
                <artifactId>native-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <finalName>bigrid-provider-service</finalName>
                    <outputDirectory>${project.basedir}/bin</outputDirectory>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
